# algorithmic_trading

./: README.md  README_RUS.md
materials/: CVX.csv  CVX2.csv  CVX_w1.csv  CVX_wr.csv  a45.csv  a98.csv  test.cc
materials/bad_csv/: AAPL.csv  CVX.csv
misc/a8/: CMakeLists.txt
misc/controller/: controller.cc  controller.h
src/: CMakeLists.txt  Doxyfile  Makefile  main.cc
src/algorithms/approximation/: a.out  least_squares.cc  least_squares.h  test.cc
src/algorithms/cubic_spline/: cubic_spline.cc  cubic_spline.h
src/algorithms/interpolation/: cubic_spline.cc  cubic_spline.h  newton_polynomial.cc  newton_polynomial.h
src/algorithms/interpolation_time/: compare.cc  compare.h
src/algorithms/least_squares/: least_squares.cc  least_squares.h
src/algorithms/matrix/: a.out  matrix.h  test.cc
src/algorithms/newton_polynomial/: newton_polynomial.cc  newton_polynomial.h
src/common/: data_struct.cc  data_struct.h
src/facade/: facade.cc  facade.h
src/tests/: Makefile  algorithms_test  interpolation  interpolation.cc  parser.cc
src/tests/algorithms/: run.cc  test.cc  test.h
src/tests/parser/: test.cc
src/utility/: CMakeLists.txt  m_time.h
src/view/build-graph_widget-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  widget_frame.cbp
src/view/build-graph_widget-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-2a18ea530507ce4c4719.json  cmakeFiles-v1-92b86f6cdb4759e0f56b.json  codemodel-v2-83338c284f998c2044bd.json  directory-painters-Debug-df1000344447d463bf99.json  index-2023-10-09T21-28-22-0223.json  target-painters-Debug-3824064428e5db1a4286.json  target-painters_autogen-Debug-bb008d7960b250d15bf6.json  target-widget_frame-Debug-564b31dd3b9c012bab31.json  target-widget_frame_autogen-Debug-bbec7c00c0357753f320.json
src/view/build-graph_widget-Desktop-Debug/painters/: Makefile  cmake_install.cmake  painters.cbp
src/view/graph_widget/: CMakeLists.txt  Makefile  graph_name.cc  graph_name.h  graph_widget.h  main.cc  resources.qrc  widget_frame.cc  widget_frame.h
src/view/graph_widget/frame/: frame.cc  frame.h
src/view/graph_widget/layers/: abstract_frame.cc  abstract_frame.h  background_frame.cc  background_frame.h  background_layer.cc  background_layer.h  graph_layer.cc  graph_layer.h  grid_layer.cc  grid_layer.h  image_layer.cc  image_layer.h  image_params.cc  image_params.h  painter_frame.cc  painter_frame.h
src/view/graph_widget/painters/: abstract.cc  abstract.h  background.cc  background.h  colors_set.h  painter.cc  painter.h  parameters.cc  parameters.h
src/view/graph_widget/ui_conf/: background_frame.ui  frame.ui  painter_frame.ui
src/view/graph_widget_old/: graph_widget.cc  style.h
src/view/graph_widget_old/layers/: graph_layer.cc  graph_layer.h  image_layer.cc  image_layer.h
src/view/main_window/: approximation_tab.cc  interpolation_tab.cc  main_window.cc  main_window.h  main_window.ui  timetest_tab.cc  weight_dialog.cc  weight_dialog.h
